syntax = "proto3";
package protocol;

//enum GameEvent {
//    None = 0;           //无
//    //PlayerJoin = 1;     //加入游戏
//    PlayerLeave = 2;    //离开游戏
//    PlayerOffline = 3;  //玩家离线
//    PlayerData = 4;     //玩家发送自定义数据
//    GameOver = 5;       //
//}

//游戏结算分为1v1、2v2结算，data.resultDisplay用于客户端结算面板的显示，data.resultData用户后台上报。游戏分胜利，失败，平局，逃跑四种结果。
enum GameResult {
    Win  = 0; //胜利
    Lose = 1; //失败
    Equal = 2; //平局
    Escape = 3; //逃跑（离开）
}

message PlayerResult {
    int64 playerid = 1;
    Record record = 3;
}

message Record {
    GameResult result = 1;
    int32 score  = 2;
    string unit = 3;
}

//玩家加入座位请求
message JoinRequest {
    string appID = 1;
    string roomID = 2;
    int64 playerID = 3; //玩家id
    int32 seatID = 4; //请求入座编号 -1随便哪个座位
}

message Room {
    string roomID = 1; //房间id
    int32 mode = 2; //房间模式 0 1房主控制
    repeated Seat seats = 3; //座位信息
}

message Seat {
    int32 id = 1; //座位编号
    bool lock = 2; //是否锁定
    Player player = 3; //是否有玩家
}

message Player {
    int64 id = 1;
    int32 group = 2;
    int32 seat = 3; // 1v1为1-2，2v2为1-4
    string nickname = 4;
    string avatar = 5;
    string gender = 6; // 0：未知，1：男，2：女
    int32 role = 7; //角色
}
